--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.8.21",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-jwt": "^3.6.0",
+    "koa-parameter": "^3.0.1",
     "koa-router": "^8.0.6",
     "mssql": "^6.0.1",
     "uuid": "^3.4.0"
