--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-parameter": "^3.0.1",
     "koa-router": "^8.0.6",
     "mssql": "^6.0.1",
+    "nodemon": "^2.0.2",
     "uuid": "^3.4.0"
   }
 }
